--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-MTQ3NTYzMTE2ODc2NTQzMTgxOA.GRxra5.ea9Sf_1K0HlAY4LiJNxyxzPtsCpujnd5iwKGek   # your real bot token
+MTQ3NTYzMTE2ODc2NTQzMTgxOA.GblhV-.c0WqoeSe5yorw0Qv0ndRQTV9ViYbFJiPJEdkH0   # your real bot token
 PREFIX=!
 ADMIN_ROLE_ID=1474746342210535536   # your admin role ID
 PAID_ROLE_ID=1474817885556834426    # buyer role ID
